nginx-rollout/active-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: nginx-active
  namespace: production

spec:
  selector:
    app: nginx

  ports:
  - port: 80
    targetPort: 80
