nginx-rollout/preview-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: nginx-preview
  namespace: production

spec:
  selector:
    app: nginx

  ports:
  - port: 80
    targetPort: 80
